SFDC Automation/src/objects/Idea.object
<CustomObject>
    <fields>
        <fullName>Date_in_this_step__c</fullName>
        <description>Date in which the idea reached its current status</description>
        <label>Date in this step</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entered_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person that entered the idea</description>
        <label>Entered by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Ideas_Entered</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimated_Date_for_Next_Step__c</fullName>
        <description>This is the date when the idea is expected to reach the following step</description>
        <label>Estimated Date for Next Step</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Objects_affected__c</fullName>
        <description>Objects that will be affected by the current idea</description>
        <label>Objects affected</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>1 is highest priority to work on</description>
        <label>Priority</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Proposed_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person that proposed the idea</description>
        <label>Proposed by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Ideas_Proposed</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>Ideas_Last_7_Days</fullName>
        <columns>IDEA.CREATED_DATE</columns>
        <columns>IDEA.TITLE</columns>
        <columns>IDEA.CREATED_BY_NICKNAME</columns>
        <columns>VOTE_STATS.WEIGHTED_SUM</columns>
        <columns>IDEA.NUM_COMMENTS</columns>
        <columns>IDEA.STATUS</columns>
        <columns>IDEA.CATEGORIES</columns>
        <columns>COMMUNITY.NAME</columns>
        <columns>IDEA.IDEA_THEME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IDEA.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Last 7 Days</label>
    </listViews>
    <recordTypes>
        <fullName>InternalIdeasIdeaRecordType</fullName>
        <active>true</active>
        <description>Record Type used to associate ideas with a specific community</description>
        <label>Internal Ideas: Idea Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_for_community_09a60000000L7RHAA0_entity_Idea</fullName>
        <active>true</active>
        <description>Record type used to associate Idea with a specific community</description>
        <label>Technical Issues: Idea Record Type</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>